button color fix, too much red, too heavy

--- a/app/static/css_custom/fabcitydashboard.css
+++ b/app/static/css_custom/fabcitydashboard.css
@@ -69,14 +69,21 @@ p.city-description {
 
 .btn-xl {
     padding: 10px 20px;
-    border-color: #E62339;
+    border-color: #e6e6e6;
     border-radius: 3px;
     text-transform: uppercase;
     font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 15px;
-    font-weight: 700;
-    color: #fff;
-    background-color: #E62339;
+    font-weight: 400;
+    color: #222;
+    background-color: #e6e6e6;
+    text-transform: lowercase;
+}
+
+.inverted{
+    border-color: #d41111;
+    background-color: #d41111;
+    color: #F7F7F7 ;
 }
 
 .menu {
@@ -98,6 +105,7 @@ p.city-description {
 .btn-xl:hover, .btn-xl:focus, .btn-xl:active, .btn-xl.active, .open .dropdown-toggle.btn-xl {
     color: #fff;
     background-color: #d41111;
+    border-color: #d41111;
 }
 
 .btn-tool {
